<?xml version="1.0" encoding="utf-8"?>
<!--
  Generic form. Bottom nav pinned to bottom, form scrolls in middle.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/header"
        layout="@layout/include_module_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:id="@+id/form_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding_horizontal"
            android:layout_marginTop="@dimen/spacing_lg"
            android:layout_marginEnd="@dimen/screen_padding_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_xl">

            <ImageView
                android:id="@+id/form_image_picker"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="@dimen/spacing_md"
                android:background="@drawable/bg_card_accent"
                android:contentDescription="@string/cd_product_image"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_camera"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground" />

            <EditText
                android:id="@+id/form_title"
                style="@style/Widget.UniSync.InputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:autofillHints="postalAddress"
                android:hint="@string/field_title"
                android:inputType="text" />

            <EditText
                android:id="@+id/form_field_2"
                style="@style/Widget.UniSync.InputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:autofillHints="postalAddress"
                android:hint="@string/field_category"
                android:inputType="text" />

            <EditText
                android:id="@+id/form_field_3"
                style="@style/Widget.UniSync.InputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:autofillHints="postalAddress"
                android:hint="@string/field_date"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/form_field_4"
                style="@style/Widget.UniSync.InputField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:autofillHints="postalAddress"
                android:hint="@string/field_location"
                android:inputType="text" />

            <EditText
                android:id="@+id/form_field_description"
                style="@style/Widget.UniSync.InputField"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginBottom="@dimen/spacing_md"
                android:autofillHints="postalAddress"
                android:gravity="top|start"
                android:hint="@string/field_description"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="@dimen/spacing_sm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/form_submit"
                style="@style/Widget.UniSync.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/action_submit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/form_cancel"
                style="@style/Widget.UniSync.Button.Social.Light"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/spacing_sm"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:text="@string/action_cancel" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/bottom_nav"
        layout="@layout/include_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
