<?xml version="1.0" encoding="utf-8"?>
<!--
  3-icon bottom navigation: 🏠 Home  |  ➕ Add (context)  |  🔔 Notifications.
  Click handlers are wired automatically by UniSyncActivity.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_nav_container"
    android:layout_width="match_parent"
    android:layout_height="32dp">

    <ImageView
        android:id="@+id/nav_left"
        android:layout_width="@dimen/icon_size_md"
        android:layout_height="@dimen/icon_size_md"
        android:layout_marginStart="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_nav_home"
        android:padding="2dp"
        android:src="@drawable/ic_nav_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nav_center"
        android:layout_width="@dimen/icon_size_md"
        android:layout_height="@dimen/icon_size_md"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_nav_browse"
        android:padding="2dp"
        android:src="@drawable/ic_nav_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nav_right"
        android:layout_width="@dimen/icon_size_md"
        android:layout_height="@dimen/icon_size_md"
        android:layout_marginEnd="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_nav_profile"
        android:padding="2dp"
        android:src="@drawable/ic_nav_bell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
